<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.sakongapps.smartraily.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/manualFragment"
        android:name="com.sakongapps.smartraily.ControlFragment"
        android:label="@string/manual_mode"
        tools:layout="@layout/fragment_control" />
        
    <fragment
        android:id="@+id/autoFragment"
        android:name="com.sakongapps.smartraily.AutoFragment"
        android:label="@string/auto_mode"
        tools:layout="@layout/fragment_auto" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.sakongapps.smartraily.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
        
    <fragment
        android:id="@+id/debugFragment"
        android:name="com.sakongapps.smartraily.DebugFragment"
        android:label="@string/debug"
        tools:layout="@layout/fragment_debug" />
</navigation> 